# sys

./: .replit  pnpm-lock.yaml  pyproject.toml  replit.md
.agents/memory/: MEMORY.md  zainjo-setup.md
artifacts/api-server/src/: app.ts
artifacts/zainjo-ui/: index.html  package.json  vite.config.ts
artifacts/zainjo-ui/.replit-artifact/: artifact.toml
artifacts/zainjo-ui/src/: index.css  main.tsx
artifacts/zainjo-ui/src/api/: client.ts  types.ts
artifacts/zainjo-ui/src/components/: Layout.tsx  ZainLogo.tsx
artifacts/zainjo-ui/src/pages/: Dashboard.tsx  (+4 more)
attached_assets/: Pasted--venv-root-ai-noc-opt-projects-sys-cd-zainjo-logstream-_1784809306519.txt  Pasted--venv-root-ai-noc-opt-projects-sys-zainjo-logstream-fro_1784803803294.txt  Pasted--venv-root-ai-noc-opt-projects-sys-zainjo-logstream-fro_1784809501620.txt  Pasted-2026-07-23T10-31-31-INFO-app-syslog-listener-TCP-syslog_1784802860456.txt  Pasted-Build-a-production-ready-on-premise-Syslog-Collector-an_1784797681769.txt  Pasted-root-ai-noc-opt-projects-sys-sudo-mkdir-p-etc-zainjo-lo_1784802163176.txt
zainjo-logstream/: .gitignore  README.md  config.yaml.example  install.sh  schema.sql
zainjo-logstream/backend/: .env.example  requirements.txt
zainjo-logstream/backend/alembic/: env.py
zainjo-logstream/backend/app/: config.py  database.py  main.py
zainjo-logstream/deployment/: nginx.conf  syslog-collector.service
zainjo-logstream/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
zainjo-logstream/frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
(+39 files in other folders)
