[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.18.5",
    "apscheduler>=3.11.3",
    "asyncpg>=0.31.0",
    "bcrypt==4.0.1",
    "fastapi>=0.139.2",
    "greenlet>=3.5.4",
    "httpx>=0.28.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dateutil>=2.9.0.post0",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.32",
    "pyyaml>=6.0.3",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn[standard]>=0.51.0",
    "uvloop>=0.22.1",
]
